--- a/src/App.css
+++ b/src/App.css
@@ -250,12 +250,14 @@ input[type=color]{
   display: flex;
   justify-content: space-between;
   align-items: center;
+  cursor: pointer;
   transition: transform 0.2s, box-shadow 0.2s;
 }
 
 .board-item:hover {
   transform: translateY(-3px);
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.12);
+  background-color: #fbfeb2;
 }
 
 .board-link {
@@ -263,6 +265,10 @@ input[type=color]{
   color: #333;
   cursor: pointer;
   font-size: 1.1rem;
+  border: 1px solid black;
+  padding: 0.5rem;
+  border-radius: 4px;
+  margin-right: 1rem;
 }
 
 .board-link:hover {
